--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<main class="py-8">
+<main>
   <div class="container">
     <div class="layout-between header-row">
       <h1>Dashboard de Documentos</h1>
@@ -9,24 +9,25 @@
     </div>
 
     <div class="dash-actions">
-      <button class="btn-filter" [ngClass]="selectedFilter === 'Todos' ? 'btn-filter--active' : 'btn-filter--inactive'"
-        (click)="onFilterChange('Todos')">
+      <button class="btn-filter" [ngClass]="!selectedFilter ? 'btn-filter--active' : 'btn-filter--inactive'"
+        (click)="onFilterChange()">
         <p class="filter-label">Todos</p>
       </button>
 
       <button class="btn-filter"
-        [ngClass]="selectedFilter === 'Processando' ? 'btn-filter--active' : 'btn-filter--inactive'"
-        (click)="onFilterChange('Processando')">
+        [ngClass]="selectedFilter === 'PROCESSING' ? 'btn-filter--active' : 'btn-filter--inactive'"
+        (click)="onFilterChange('PROCESSING')">
         <p class="filter-label">Processando</p>
       </button>
 
-      <button class="btn-filter" [ngClass]="selectedFilter === 'Pronto' ? 'btn-filter--active' : 'btn-filter--inactive'"
-        (click)="onFilterChange('Pronto')">
+      <button class="btn-filter"
+        [ngClass]="selectedFilter === 'COMPLETED' ? 'btn-filter--active' : 'btn-filter--inactive'"
+        (click)="onFilterChange('COMPLETED')">
         <p class="filter-label">Pronto</p>
       </button>
 
-      <button class="btn-filter" [ngClass]="selectedFilter === 'Erro' ? 'btn-filter--active' : 'btn-filter--inactive'"
-        (click)="onFilterChange('Erro')">
+      <button class="btn-filter" [ngClass]="selectedFilter === 'FAILED' ? 'btn-filter--active' : 'btn-filter--inactive'"
+        (click)="onFilterChange('FAILED')">
         <p class="filter-label">Erro</p>
       </button>
     </div>
@@ -80,12 +81,8 @@
       </div>
     </div>
 
-    <div class="paginator-spacing">
-      <div class="paginator-wrapper">
-        <mat-paginator class="app-paginator mat-elevation-z0" [length]="totalElements" [pageSize]="size"
-          [pageSizeOptions]="[5, 10, 25]" (page)="onPageChange($event)">
-        </mat-paginator>
-      </div>
-    </div>
+    <mat-paginator [length]="totalElements" [pageSize]="size" [pageSizeOptions]="[5, 10, 25]"
+      (page)="onPageChange($event)">
+    </mat-paginator>
   </div>
 </main>
